--- a/Transfer Learning with TensorFlow.ipynb
+++ b/Transfer Learning with TensorFlow.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
     "xdim = train_x.shape[1:]\n",
     "ydim = train_y.shape[1]\n",
     "\n",
-    "net_data = load(\"bvlc_alexnet.npy\", encoding=\"latin1\").item()\n",
+    "net_data = load(\"bvlc-alexnet.npy\", encoding=\"latin1\").item()\n",
     "\n",
     "def conv(input, kernel, biases, k_h, k_w, c_o, s_h, s_w,  padding=\"VALID\", group=1):\n",
     "    '''From https://github.com/ethereon/caffe-tensorflow\n",
@@ -81,7 +81,7 @@
     "    return  tf.reshape(tf.nn.bias_add(conv, biases), [-1]+conv.get_shape().as_list()[1:])\n",
     "\n",
     "x = tf.placeholder(tf.float32, (None,) + xdim)\n",
-    "resized = tf.image.resize_images(x, 227, 227)\n",
+    "resized = tf.image.resize_images(x, (227, 227))\n",
     "\n",
     "def features():\n",
     "\n",
@@ -202,11 +202,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image 0\n",
+      "miniature poodle: 0.389\n",
+      "toy poodle: 0.223\n",
+      "Bedlington terrier: 0.173\n",
+      "standard poodle: 0.150\n",
+      "komondor: 0.026\n",
+      "\n",
+      "Image 1\n",
+      "weasel: 0.331\n",
+      "polecat, fitch, foulmart, foumart, Mustela putorius: 0.280\n",
+      "black-footed ferret, ferret, Mustela nigripes: 0.210\n",
+      "mink: 0.081\n",
+      "Arctic fox, white fox, Alopex lagopus: 0.027\n",
+      "\n",
+      "Time: 5.141 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: You don't need to edit this code.\n",
     "\n",
@@ -259,11 +281,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot feed value of shape (2, 32, 32, 3) for Tensor 'Placeholder:0', which has shape '(?, 227, 227, 3)'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-248430fd6459>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;31m# Run Inference\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeed_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mim1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mim2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;31m# Print Output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/dom/conda/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    715\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    716\u001b[0m       result = self._run(None, fetches, feed_dict, options_ptr,\n\u001b[0;32m--> 717\u001b[0;31m                          run_metadata_ptr)\n\u001b[0m\u001b[1;32m    718\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    719\u001b[0m         \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/dom/conda/lib/python3.5/site-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m_run\u001b[0;34m(self, handle, fetches, feed_dict, options, run_metadata)\u001b[0m\n\u001b[1;32m    892\u001b[0m                 \u001b[0;34m'Cannot feed value of shape %r for Tensor %r, '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    893\u001b[0m                 \u001b[0;34m'which has shape %r'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 894\u001b[0;31m                 % (np_val.shape, subfeed_t.name, str(subfeed_t.get_shape())))\n\u001b[0m\u001b[1;32m    895\u001b[0m           \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_feedable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msubfeed_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    896\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Tensor %s may not be fed.'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0msubfeed_t\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Cannot feed value of shape (2, 32, 32, 3) for Tensor 'Placeholder:0', which has shape '(?, 227, 227, 3)'"
+     ]
+    }
+   ],
    "source": [
     "from caffe_classes import class_names\n",
     "\n",
@@ -281,7 +317,7 @@
     "im1 = (imread(\"construction.jpg\")[:,:,:3]).astype(float32)\n",
     "im1 = im1 - mean(im1)\n",
     "\n",
-    "im2 = (imread(\"construction.jpg\")[:,:,:3]).astype(float32)\n",
+    "im2 = (imread(\"stop.jpg\")[:,:,:3]).astype(float32)\n",
     "im2 = im2 - mean(im2)\n",
     "\n",
     "# Run Inference\n",
@@ -333,7 +369,7 @@
     "im1 = (imread(\"construction.jpg\")[:,:,:3]).astype(float32)\n",
     "im1 = im1 - mean(im1)\n",
     "\n",
-    "im2 = (imread(\"construction.jpg\")[:,:,:3]).astype(float32)\n",
+    "im2 = (imread(\"stop.jpg\")[:,:,:3]).astype(float32)\n",
     "im2 = im2 - mean(im2)\n",
     "\n",
     "# Run Inference\n",
@@ -412,10 +448,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
